src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Billing Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strike</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualGrossProfit__c</fullName>
        <formula>Actual_Gross_Profit_Social__c + Actual_Gross_Profit_YT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Discount__c</fullName>
        <label>Actual Discount</label>
        <summarizedField>Sub_Project__c.Discount__c</summarizedField>
        <summaryFilterItems>
            <field>Sub_Project__c.Discount_Violation__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_Social__c</fullName>
        <label>Actual Gross Profit Social</label>
        <summarizedField>Sub_Project__c.Actual_Gross_Profit_Social_Rollup__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_YT__c</fullName>
        <label>Actual Gross Profit YT</label>
        <summarizedField>Sub_Project__c.Actual_Gross_Profit_YT_Rollup__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit__c</fullName>
        <label>Actual Gross Profit No Rebate Rollup</label>
        <summarizedField>Sub_Project__c.ActualGrossProfitCopy__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Rebate__c</fullName>
        <label>Actual Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdWords_Spend__c</fullName>
        <label>Media Spend</label>
        <summarizedField>Sub_Project__c.AdWordsSpend__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AddXeroTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add VAT/GST Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalRep__c</fullName>
        <formula>IF(!ISBLANK(Opportunity__r.Additional_Rep__c),
Opportunity__r.Additional_Rep__r.FirstName &amp; &quot; &quot; &amp;
Opportunity__r.Additional_Rep__r.LastName,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Additional Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>Account__r.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllInvoicesPaidDate__c</fullName>
        <label>All Invoices Paid Date</label>
        <summarizedField>Sub_Project__c.Payment_Date__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BC_Rebate__c</fullName>
        <formula>BillingCondition__r.Rebate_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BillingConditionName__c</fullName>
        <formula>BillingCondition__r.Name</formula>
        <label>Billing Condition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCondition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Condition</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>BillingCondition__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BillingCondition__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand/Account</label>
        <referenceTo>Brand_Account__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM TO BE DELETED</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPV__c</fullName>
        <label>CPV TO BE DELETED</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSEmailFromBrandAccount__c</fullName>
        <label>CSEmailFromBrandAccount</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <formula>IF(
AND( Start_Date__c &lt;= TODAY(),TODAY() &lt;= End_Date__c) ,&quot;In Progress&quot;,
IF(TODAY() &gt; End_Date__c,&quot;Finished&quot;,
&quot;Planned&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientServicesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Services Rep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select user with Client Services profile.</errorMessage>
            <filterItems>
                <field>User.Client_Services_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ClientServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_IO__c</fullName>
        <label>IO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Spend_Defined_on_IO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Spend Defined on IO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Spend_Social__c</fullName>
        <label>Client Spend Social</label>
        <summarizedField>Sub_Project__c.Client_Spend_Social_rollup__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Spend_YT__c</fullName>
        <label>Client Spend YT</label>
        <summarizedField>Sub_Project__c.Client_Spend_YT_rollup__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Spend__c</fullName>
        <label>Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Paid_Date__c</fullName>
        <label>Commission Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsultancyFeePaidDate__c</fullName>
        <label>Consultancy Fee Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConsultancyFeePaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultancy Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Ended__c</fullName>
        <formula>Today()&gt;=End_Date__c + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date+3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentUser_CS__c</fullName>
        <formula>if( $User.Id = ClientServicesRep__r.Id ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser=CS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Xero_Campaign_Name__c</fullName>
        <label>Custom Xero Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_running__c</fullName>
        <formula>End_Date__c - Start_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultBrandAccountCSRepEmail__c</fullName>
        <formula>BrandAccount__r.DefaultClientServicesRep__r.Email</formula>
        <label>DefaultBrandAccountCSRepEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultClientServicesRep__c</fullName>
        <formula>BrandAccount__r.DefaultClientServicesRep__c</formula>
        <label>Default Client Services Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Terms__c</fullName>
        <formula>BillingCondition__r.Discount_Terms__c != 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDateNumber__c</fullName>
        <formula>YEAR(End_Date__c)*100 + MONTH(End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndDateNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedRebate__c</fullName>
        <formula>BillingCondition__r.Rebate_Rate__c * (
	IF (CONTAINS(BillingCondition__r.Name, &apos;Instant Rebate&apos;),
		(Client_Spend__c - Media_Order__c) ,
    		IF (ISPICKVAL(Margin_Type__c, &apos;% of Media&apos;), Media_Order__c, Client_Spend__c)  
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Profit__c</fullName>
        <label>Expected Gross Profit</label>
        <summarizedField>Sub_Project__c.Expected_Gross_Profit__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Margin__c</fullName>
        <formula>IF(AND(Client_Spend__c != 0, Invoices_for_Processing__c = 0), 
ActualGrossProfit__c / Client_Spend__c, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gaps_Exist_Between_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gaps Exist Between Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <inlineHelpText>Fill in what Geo, Zip Code, etc we need for campaign targeting</inlineHelpText>
        <label>Geo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Client_Spend__c - Media_Order__c - ExpectedRebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Profit OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsideSalesRep__c</fullName>
        <formula>IF(!ISBLANK(Opportunity__r.InsideSalesRep__c),
Opportunity__r.InsideSalesRep__r.FirstName &amp; &quot; &quot; &amp;
Opportunity__r.InsideSalesRep__r.LastName,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Inside Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Roll_Up__c</fullName>
        <label>Invoice Amount Roll Up</label>
        <summarizedField>Sub_Project__c.Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InvoicesPaid__c</fullName>
        <formula>NoOfIvoicesNotPaid__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoices Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoices_for_Processing__c</fullName>
        <label>Invoices for Processing</label>
        <summaryFilterItems>
            <field>Sub_Project__c.Synced_with_Xero__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InvoicingType__c</fullName>
        <formula>TEXT(Opportunity__r.InvoicingType__c)</formula>
        <label>Invoicing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRunning__c</fullName>
        <formula>AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI TO BE DELETED</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese (simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MM_Spendings_Counter__c</fullName>
        <label>MM Spendings Counter</label>
        <summaryForeignKey>MM_Spendings__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin_Type__c</fullName>
        <label>Margin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Budget</fullName>
                    <default>true</default>
                    <label>% of Budget</label>
                </value>
                <value>
                    <fullName>% of Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxPaymentEndDate__c</fullName>
        <label>Max Payment End Date</label>
        <summarizedField>Sub_Project__c.End_Date__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MediaBuyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Buyer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Internal Users</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>contains</operation>
                <value>Media Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Order_Roll_Up__c</fullName>
        <label>Media Order Roll Up</label>
        <summarizedField>Sub_Project__c.Media_Order__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Media_Order__c</fullName>
        <formula>IF(ISPICKVAL(Margin_Type__c,&apos;% of Media&apos;),
Client_Spend__c / (1+Margin__c),
Client_Spend__c * (1-Margin__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinPaymentStartDate__c</fullName>
        <label>Min Payment Start Date</label>
        <summarizedField>Sub_Project__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>More_Info__c</fullName>
        <label>More Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_Invoicing_Info__c</fullName>
        <label>More Invoicing Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Profit__c</fullName>
        <formula>ActualGrossProfit__c  - Sales_Commission_rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoOfCreatives__c</fullName>
        <label>No Of Creatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfIvoicesNotPaid__c</fullName>
        <label>No Of Ivoices Not Paid</label>
        <summaryFilterItems>
            <field>Sub_Project__c.Paid__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoOfPaymentsWithNoInvoices__c</fullName>
        <label>No Of Payments With No Invoices</label>
        <summaryFilterItems>
            <field>Sub_Project__c.Synced_with_Xero__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_IS_Reps__c</fullName>
        <label>No of IS Reps</label>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.Commission_Type__c</field>
            <operation>contains</operation>
            <value>Inside Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Sales_Rep__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_sales_reps__c</fullName>
        <label>No Of Sales Reps</label>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.Commission_Type__c</field>
            <operation>notContain</operation>
            <value>Inside Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Sales_Rep__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfPlatforms__c</fullName>
        <formula>Opportunity__r.NumberOfPlatforms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Platforms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Order</fullName>
                    <default>true</default>
                    <label>Budget Order</label>
                </value>
                <value>
                    <fullName>View Order</fullName>
                </value>
                <value>
                    <fullName>Impression Order</fullName>
                </value>
                <value>
                    <fullName>Reach Order</fullName>
                </value>
                <value>
                    <fullName>Click Order</fullName>
                </value>
                <value>
                    <fullName>Link Click Order</fullName>
                </value>
                <value>
                    <fullName>Complete View Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMaxEndDateMatches__c</fullName>
        <formula>MaxPaymentEndDate__c == End_Date__c</formula>
        <label>Payment Max End Date Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMinStartDateMatches__c</fullName>
        <formula>Start_Date__c == MinPaymentStartDate__c</formula>
        <label>Payment Min Start Date Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentsImpressionsSpend__c</fullName>
        <label>Payments Impressions Spend</label>
        <summarizedField>Sub_Project__c.ProjectsImpressionsSpend__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentsViewsSpend__c</fullName>
        <label>Payments Views Spend</label>
        <summarizedField>Sub_Project__c.ProjectsViewsSpend__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PerformMMSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Given contract should be synchronized to MM.</description>
        <label>Perform MM Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platforms__c</fullName>
        <label>Platforms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Opportunity__r.Strike_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Commission_rollup__c</fullName>
        <label>Sales Commission</label>
        <summarizedField>Contract_Sales_Rep__c.Commission__c</summarizedField>
        <summaryForeignKey>Contract_Sales_Rep__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SpendRefreshDate__c</fullName>
        <label>Spend Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_R__c</fullName>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strike_Final_Margin__c</fullName>
        <formula>IF(BEGINS(BillingCondition__r.Name,&quot;Rebate&quot;), BillingCondition__r.Default_Margin__c - BillingCondition__r.Rebate_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike Final Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strike_ID__c</fullName>
        <label>Strike ID text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strike_Profit__c</fullName>
        <formula>BillingCondition__r.Strike_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sync_with_MM__c</fullName>
        <label>Sync with MM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Targeting__c</fullName>
        <label>Targeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_RollUp__c</fullName>
        <label>Total Revenue</label>
        <summarizedField>Sub_Project__c.Total_Revenue_report__c</summarizedField>
        <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>IF(ISPICKVAL(Account_Type__c,&quot;Client&quot;), 
   Client_Spend__c - Media_Order__c,
   Client_Spend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>